z linkiem do spotify
:)

--- a/Python/projekt_KM/spotify.ipynb
+++ b/Python/projekt_KM/spotify.ipynb
@@ -322,6 +322,94 @@
     "\n",
     "print(\"Wykresy zostały wygenerowane i zapisane.\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A tu wersja generujaca pdf z linkiem :)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting reportlab\n",
+      "  Obtaining dependency information for reportlab from https://files.pythonhosted.org/packages/44/2c/f09a5abefa8f2b575acfc19ed4536a365ef0432ae3bce94a57a2de9b4f52/reportlab-4.0.8-py3-none-any.whl.metadata\n",
+      "  Downloading reportlab-4.0.8-py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: pillow>=9.0.0 in c:\\users\\konmak\\appdata\\local\\anaconda3\\lib\\site-packages (from reportlab) (9.4.0)\n",
+      "Requirement already satisfied: chardet in c:\\users\\konmak\\appdata\\local\\anaconda3\\lib\\site-packages (from reportlab) (4.0.0)\n",
+      "Downloading reportlab-4.0.8-py3-none-any.whl (1.9 MB)\n",
+      "   ---------------------------------------- 0.0/1.9 MB ? eta -:--:--\n",
+      "   - -------------------------------------- 0.1/1.9 MB 2.6 MB/s eta 0:00:01\n",
+      "   ------- -------------------------------- 0.4/1.9 MB 4.5 MB/s eta 0:00:01\n",
+      "   ------------------ --------------------- 0.9/1.9 MB 7.2 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 1.6/1.9 MB 9.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 1.9/1.9 MB 9.5 MB/s eta 0:00:00\n",
+      "Installing collected packages: reportlab\n",
+      "Successfully installed reportlab-4.0.8\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install reportlab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pliki PDF zostały wygenerowane i zapisane.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from reportlab.pdfgen import canvas\n",
+    "from reportlab.lib.pagesizes import letter\n",
+    "from reportlab.lib.utils import ImageReader\n",
+    "from PIL import Image\n",
+    "\n",
+    "images_directory = 'images/'\n",
+    "pdf_directory = 'pdf/'\n",
+    "\n",
+    "# Tworzenie katalogu dla PDF-ów, jeśli nie istnieje\n",
+    "os.makedirs(pdf_directory, exist_ok=True)\n",
+    "\n",
+    "# Pętla przechodząca przez wszystkie pliki PNG w katalogu obrazów\n",
+    "for filename in os.listdir(images_directory):\n",
+    "    if filename.endswith('.png'):\n",
+    "        # Ścieżka do obrazu PNG\n",
+    "        image_path = os.path.join(images_directory, filename)\n",
+    "\n",
+    "        # Ustalenie rozmiarów obrazu za pomocą PIL\n",
+    "        with Image.open(image_path) as img:\n",
+    "            width, height = img.size\n",
+    "\n",
+    "        # Tworzenie pliku PDF\n",
+    "        pdf_path = os.path.join(pdf_directory, filename.replace('.png', '.pdf'))\n",
+    "        c = canvas.Canvas(pdf_path, pagesize=(width, height))\n",
+    "        c.drawImage(ImageReader(image_path), 0, 0, width=width, height=height)\n",
+    "\n",
+    "        # Dodawanie linku\n",
+    "        link = \"https://open.spotify.com/track/\" + filename.replace('.csv.png', '')\n",
+    "        c.linkURL(link, (0, 0, width, height), relative=1)\n",
+    "\n",
+    "        c.save()\n",
+    "\n",
+    "print(\"Pliki PDF zostały wygenerowane i zapisane.\")\n"
+   ]
   }
  ],
  "metadata": {
